Discover Kube targets by Endpoints, not Services
Fixes #282