@@ -45,7 +45,6 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
 import java.net.MalformedURLException;
@@ -53,26 +52,30 @@ import java.net.UnknownHostException;
 import java.util.Arrays;
 import java.util.List;
 
+import javax.management.remote.JMXServiceURL;
+
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.invocation.InvocationOnMock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.stubbing.Answer;
 
 import com.redhat.rhjmc.containerjfr.core.log.Logger;
 import com.redhat.rhjmc.containerjfr.core.net.JFRConnectionToolkit;
-import com.redhat.rhjmc.containerjfr.net.NetworkResolver;
 import com.redhat.rhjmc.containerjfr.platform.ServiceRef;
 
 import io.kubernetes.client.ApiException;
 import io.kubernetes.client.apis.CoreV1Api;
-import io.kubernetes.client.models.V1Service;
-import io.kubernetes.client.models.V1ServiceList;
-import io.kubernetes.client.models.V1ServicePort;
-import io.kubernetes.client.models.V1ServiceSpec;
+import io.kubernetes.client.models.V1EndpointAddress;
+import io.kubernetes.client.models.V1EndpointPort;
+import io.kubernetes.client.models.V1EndpointSubset;
+import io.kubernetes.client.models.V1Endpoints;
+import io.kubernetes.client.models.V1EndpointsList;
+import io.kubernetes.client.models.V1ObjectReference;
 
 @ExtendWith(MockitoExtension.class)
 class KubeApiPlatformClientTest {
@@ -81,161 +84,111 @@ class KubeApiPlatformClientTest {
     @Mock CoreV1Api api;
     String namespace = "someNamespace";
     @Mock JFRConnectionToolkit connectionToolkit;
-    @Mock NetworkResolver resolver;
     @Mock Logger logger;
 
     @BeforeEach
     void setup() {
-        client =
-                new KubeApiPlatformClient(
-                        api, namespace, () -> connectionToolkit, resolver, logger);
+        client = new KubeApiPlatformClient(api, namespace, () -> connectionToolkit, logger);
     }
 
-    @Nested
-    class DiscoverableServicesTests {
+    @Test
+    void discoversNoServicesIfApiThrows() throws ApiException {
+        when(api.listNamespacedEndpoints(
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any()))
+                .thenThrow(ApiException.class);
 
-        @Test
-        void discoversNoServicesIfApiThrows() throws ApiException {
-            when(api.listNamespacedService(
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any()))
-                    .thenThrow(ApiException.class);
+        assertThat(client.listDiscoverableServices(), Matchers.empty());
 
-            assertThat(client.listDiscoverableServices(), Matchers.empty());
+        verify(api)
+                .listNamespacedEndpoints(
+                        namespace, null, null, null, null, null, null, null, null, null);
+        verifyNoMoreInteractions(api);
+    }
 
-            verify(api)
-                    .listNamespacedService(
-                            namespace, null, null, null, null, null, null, null, null, null);
-            verifyNoMoreInteractions(api);
-            verifyZeroInteractions(resolver);
-        }
+    @Test
+    void discoversServices() throws ApiException, UnknownHostException, MalformedURLException {
+        V1EndpointsList mockServiceList = mock(V1EndpointsList.class);
 
-        @Test
-        void discoversAndResolvesServices()
-                throws ApiException, UnknownHostException, MalformedURLException {
-            V1ServiceList mockServiceList = mock(V1ServiceList.class);
+        V1Endpoints mockServiceA = mock(V1Endpoints.class);
+        V1EndpointAddress aAddr = mock(V1EndpointAddress.class);
+        when(aAddr.getIp()).thenReturn("127.0.0.1");
+        V1ObjectReference aRef = mock(V1ObjectReference.class);
+        when(aRef.getName()).thenReturn("ServiceA.local");
+        when(aAddr.getTargetRef()).thenReturn(aRef);
+        V1EndpointSubset aSubset = mock(V1EndpointSubset.class);
+        when(aSubset.getAddresses()).thenReturn(List.of(aAddr));
+        when(mockServiceA.getSubsets()).thenReturn(List.of(aSubset));
+        V1EndpointPort aPort1 = mock(V1EndpointPort.class);
+        when(aPort1.getName()).thenReturn("jfr-jmx");
+        when(aPort1.getPort()).thenReturn(123);
+        V1EndpointPort aPort2 = mock(V1EndpointPort.class);
+        when(aPort2.getName()).thenReturn("port-name");
+        when(aPort2.getPort()).thenReturn(456);
+        when(aSubset.getPorts()).thenReturn(List.of(aPort1, aPort2));
 
-            V1Service mockServiceA = mock(V1Service.class);
-            V1ServiceSpec aSpec = mock(V1ServiceSpec.class);
-            when(aSpec.getClusterIP()).thenReturn("127.0.0.1");
-            when(mockServiceA.getSpec()).thenReturn(aSpec);
-            V1ServicePort aPort1 = mock(V1ServicePort.class);
-            when(aPort1.getPort()).thenReturn(123);
-            V1ServicePort aPort2 = mock(V1ServicePort.class);
-            when(aPort2.getPort()).thenReturn(456);
-            when(aSpec.getPorts()).thenReturn(Arrays.asList(aPort1, aPort2));
+        V1Endpoints mockServiceB = mock(V1Endpoints.class);
+        V1EndpointAddress bAddr = mock(V1EndpointAddress.class);
+        when(bAddr.getIp()).thenReturn("10.0.0.1");
+        V1ObjectReference bRef = mock(V1ObjectReference.class);
+        when(bRef.getName()).thenReturn("b-service.example.com");
+        when(bAddr.getTargetRef()).thenReturn(bRef);
+        V1EndpointSubset bSubset = mock(V1EndpointSubset.class);
+        when(bSubset.getAddresses()).thenReturn(List.of(bAddr));
+        when(mockServiceB.getSubsets()).thenReturn(List.of(bSubset));
+        V1EndpointPort bPort1 = mock(V1EndpointPort.class);
+        when(bPort1.getName()).thenReturn("jfr-jmx");
+        when(bPort1.getPort()).thenReturn(7899);
+        when(bSubset.getPorts()).thenReturn(List.of(bPort1));
 
-            V1Service mockServiceB = mock(V1Service.class);
-            V1ServiceSpec bSpec = mock(V1ServiceSpec.class);
-            when(bSpec.getClusterIP()).thenReturn("10.0.0.1");
-            when(mockServiceB.getSpec()).thenReturn(bSpec);
-            V1ServicePort bPort = mock(V1ServicePort.class);
-            when(bPort.getPort()).thenReturn(7899);
-            when(bSpec.getPorts()).thenReturn(Arrays.asList(bPort));
+        when(mockServiceList.getItems()).thenReturn(Arrays.asList(mockServiceA, mockServiceB));
+        when(api.listNamespacedEndpoints(
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any(),
+                        Mockito.any()))
+                .thenReturn(mockServiceList);
 
-            when(mockServiceList.getItems()).thenReturn(Arrays.asList(mockServiceA, mockServiceB));
-            when(api.listNamespacedService(
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any()))
-                    .thenReturn(mockServiceList);
-            when(resolver.resolveCanonicalHostName("127.0.0.1")).thenReturn("ServiceA.local");
-            when(resolver.resolveCanonicalHostName("10.0.0.1")).thenReturn("b-service.example.com");
+        when(connectionToolkit.createServiceURL(Mockito.anyString(), Mockito.anyInt()))
+                .thenAnswer(
+                        new Answer<>() {
+                            @Override
+                            public JMXServiceURL answer(InvocationOnMock args) throws Throwable {
+                                String host = args.getArgument(0);
+                                int port = args.getArgument(1);
+                                return new JMXServiceURL(
+                                        "rmi",
+                                        "",
+                                        0,
+                                        "/jndi/rmi://" + host + ":" + port + "/jmxrmi");
+                            }
+                        });
 
-            List<ServiceRef> result = client.listDiscoverableServices();
+        List<ServiceRef> result = client.listDiscoverableServices();
 
-            ServiceRef serv1 =
-                    new ServiceRef(connectionToolkit, "127.0.0.1", 123, "ServiceA.local");
-            ServiceRef serv2 =
-                    new ServiceRef(connectionToolkit, "127.0.0.1", 456, "ServiceA.local");
-            ServiceRef serv3 =
-                    new ServiceRef(connectionToolkit, "10.0.0.1", 7899, "b-service.example.com");
+        ServiceRef serv1 = new ServiceRef(connectionToolkit, "127.0.0.1", 123, "ServiceA.local");
+        ServiceRef serv2 =
+                new ServiceRef(connectionToolkit, "10.0.0.1", 7899, "b-service.example.com");
 
-            assertThat(result, Matchers.contains(serv1, serv2, serv3));
+        assertThat(result, Matchers.equalTo(List.of(serv1, serv2)));
 
-            assertThat(result, Matchers.hasSize(3));
-
-            verify(resolver, Mockito.times(2)).resolveCanonicalHostName("127.0.0.1");
-            verify(resolver).resolveCanonicalHostName("10.0.0.1");
-            verifyNoMoreInteractions(resolver);
-            verify(api)
-                    .listNamespacedService(
-                            namespace, null, null, null, null, null, null, null, null, null);
-            verifyNoMoreInteractions(api);
-        }
-
-        @Test
-        void ignoresUnresolveableServices()
-                throws ApiException, UnknownHostException, MalformedURLException {
-            V1ServiceList mockServiceList = mock(V1ServiceList.class);
-
-            V1Service mockServiceA = mock(V1Service.class);
-            V1ServiceSpec aSpec = mock(V1ServiceSpec.class);
-            when(aSpec.getClusterIP()).thenReturn("127.0.0.1");
-            when(mockServiceA.getSpec()).thenReturn(aSpec);
-            V1ServicePort aPort1 = mock(V1ServicePort.class);
-            when(aPort1.getPort()).thenReturn(123);
-            V1ServicePort aPort2 = mock(V1ServicePort.class);
-            when(aPort2.getPort()).thenReturn(456);
-            when(aSpec.getPorts()).thenReturn(Arrays.asList(aPort1, aPort2));
-
-            V1Service mockServiceB = mock(V1Service.class);
-            V1ServiceSpec bSpec = mock(V1ServiceSpec.class);
-            when(bSpec.getClusterIP()).thenReturn("10.0.0.1");
-            when(mockServiceB.getSpec()).thenReturn(bSpec);
-            V1ServicePort bPort = mock(V1ServicePort.class);
-            when(bPort.getPort()).thenReturn(7899);
-            when(bSpec.getPorts()).thenReturn(Arrays.asList(bPort));
-
-            when(mockServiceList.getItems()).thenReturn(Arrays.asList(mockServiceA, mockServiceB));
-            when(api.listNamespacedService(
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any(),
-                            Mockito.any()))
-                    .thenReturn(mockServiceList);
-            when(resolver.resolveCanonicalHostName("127.0.0.1")).thenReturn("ServiceA.local");
-            when(resolver.resolveCanonicalHostName("10.0.0.1"))
-                    .thenThrow(UnknownHostException.class);
-
-            List<ServiceRef> result = client.listDiscoverableServices();
-
-            ServiceRef serv1 =
-                    new ServiceRef(connectionToolkit, "127.0.0.1", 123, "ServiceA.local");
-            ServiceRef serv2 =
-                    new ServiceRef(connectionToolkit, "127.0.0.1", 456, "ServiceA.local");
-
-            assertThat(result, Matchers.contains(serv1, serv2));
-            assertThat(result, Matchers.hasSize(2));
-
-            verify(resolver, Mockito.times(2)).resolveCanonicalHostName("127.0.0.1");
-            verify(resolver).resolveCanonicalHostName("10.0.0.1");
-            verifyNoMoreInteractions(resolver);
-            verify(api)
-                    .listNamespacedService(
-                            namespace, null, null, null, null, null, null, null, null, null);
-            verifyNoMoreInteractions(api);
-        }
+        verify(api)
+                .listNamespacedEndpoints(
+                        namespace, null, null, null, null, null, null, null, null, null);
+        verifyNoMoreInteractions(api);
     }
 }
